修复了上传为空文件的问题